Fixes spacing on cms menu.

--- a/client/app/cms/cms.styl
+++ b/client/app/cms/cms.styl
@@ -92,8 +92,12 @@
     font-size 18px
     line-height 60px
 
+.sidebar-nav > .sidebar-brand
+    text-indent 20px
+    
 .sidebar-nav > .sidebar-brand a
     color #999999
+    
 
 .sidebar-nav > .sidebar-brand a:hover
     color #fff
